Snackbar: added start/end position, fixed alignment bug (#92, #2042)

--- a/src/MudBlazor/Styles/components/_snackbar.scss
+++ b/src/MudBlazor/Styles/components/_snackbar.scss
@@ -41,6 +41,7 @@
         margin-inline-start: auto;
         margin-inline-end: -8px;
         padding-inline-start: 16px;
+        padding-inline-end: unset;
 
         & > button {
             color: inherit;
